k8s/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: icecharts-beta
  labels:
    app.kubernetes.io/name: icecharts
    app.kubernetes.io/part-of: icecharts
