k8s/manifests/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: icecharts-beta
  labels:
    app: api
    app.kubernetes.io/name: icecharts
    app.kubernetes.io/component: api
    app.kubernetes.io/version: "1.0.2"
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
