k8s/manifests/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: icecharts-beta
  labels:
    app: minio
    app.kubernetes.io/name: icecharts
    app.kubernetes.io/component: minio
    app.kubernetes.io/version: "1.0.2"
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: minio
  ports:
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: api
  - port: 9001
    targetPort: 9001
    protocol: TCP
    name: console
