k8s/manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: icecharts-beta
  labels:
    app: redis
    app.kubernetes.io/name: icecharts
    app.kubernetes.io/component: redis
    app.kubernetes.io/version: "1.0.2"
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
