k8s/manifests/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: icecharts-beta
  labels:
    app: web
    app.kubernetes.io/name: icecharts
    app.kubernetes.io/component: web
    app.kubernetes.io/version: "1.0.2"
    app.kubernetes.io/managed-by: kubectl
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
